# AesGcmSiv.Net

./: .editorconfig  .gitignore  AesGcmSiv.Net.sln  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  SECURITY.md  TODO.md
.github/: dependabot.yml
.github/workflows/: build.yml
AesGcmSiv.Net/: .xml  AesGcmSiv.Net.csproj
AesGcmSiv.Net/Crypto/: AesGcmSiv.cs
AesGcmSiv.Tests/: .xml  AesGcmSiv.Tests.csproj  ApiDesignTests.cs  UnitTest1.cs
Native/: CMakeLists.txt  CMakeLists_mock.txt  aesgcmsiv.cpp  aesgcmsiv.h  mock_aesgcmsiv.cpp
